# Cargo.toml
[package]
name = "rfbslideshow"
version = "0.3.4"
edition = "2021"

[dependencies]
image = { version = "*", features = ["gif"] }
rusttype = "*"
serde = { version = "*", features = ["derive"] }
toml = "*"
jwalk = "*"
rayon = "*"
fast_image_resize = { version = "*", features = ["image"] }
parking_lot = "*"
rouille = "*"